[metadata]
name = gardener
description = Dummy project for GitHub Actions
author = Bartosz Mikulski
license = MIT
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages = 
    gardener
python_requires = >=3.9
zip_safe = no


[options.extras_require]
testing =
    pytest>=6.0
    tox>=3.24